OO-3181: Evaluation form elemnent for file upload